src/tests/testfiles/unary-operators/12.txt
testfiles/unary-operators/12.c:2:2: error: lvalue required as increment operand
++5;
^
